# linear-regression-tensorflow

./: README.md  db.sqlite3  main.py  pyproject.toml
config/: settings.py  urls.py
ml/: __init__.py  exceptions  exceptions.py  predict.py  predictor.py  preprocessing.py  schemas.py  train.py
ml/saved_models/: feature_columns.pkl  model.keras
predictor/: forms.py  urls.py  views.py
predictor/templates/predictor/: home.html
