[project]
name = "linear-regression-tensorflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "gunicorn>=26.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
